--- a/singlewindow/singlewindow/src/main/resources/static/html/User_blog.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/User_blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Approval Blog</title>
+    <script src="./javascript/load_header.js"></script>
     <style>
         /* Google Font */
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
@@ -123,8 +124,8 @@
         /* Dark Mode Toggle */
         .toggle-btn {
             position: fixed;
-            top: 20px;
-            right: 30px;
+            top: 100px;
+            right: 50px;
             padding: 10px 15px;
             background: #0078D7;
             color: white;
