--- a/singlewindow/singlewindow/src/main/resources/static/html/User_Registration.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/User_Registration.html
@@ -22,7 +22,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./User_Registration.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./user_startup.html">Startup</a></li>
                     <li class="nav-item"><a class="nav-link" href="./User_blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="./User_contact.html">Contact Us</a></li>
@@ -96,6 +96,7 @@
                     </a>
                 </div>
                 <div class="col-md-2 col-sm-6">
+                    <a href="./User_contact.html" class="text-decoration-none">
                     <div class="card h-100 shadow-sm hover-card">
                         <div class="card-body text-center">
                             <img src="/images/contact_img.png" alt="" height="100px">
@@ -105,6 +106,7 @@
                 </div>
             </div>
         </div>
+    </a>
     </div>
 
     <!-- Business Information Form -->
