--- a/singlewindow/singlewindow/src/main/resources/static/html/User_contact.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/User_contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
+    <script src="./javascript/load_header.js"></script>
     <style>
         /* Google Font */
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
@@ -15,14 +16,10 @@
             color: white;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
+            min-height: 100vh;
         }
         .container {
-            width: 80%;
+            width: 100%;
             max-width: 900px;
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(10px);
@@ -30,6 +27,7 @@
             border-radius: 12px;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
             text-align: center;
+            margin: 100px auto 30px;
         }
         .container h2 {
             font-size: 26px;
