--- a/singlewindow/singlewindow/src/main/resources/static/html/user_startup.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/user_startup.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startup Assistance Portal</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./css/User_registration.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./javascript/load_header.js"></script>
     <style>
         /* Google Font */
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
@@ -21,7 +26,7 @@
         .container {
             width: 90%;
             max-width: 900px;
-            margin: 50px auto;
+            margin: 100px auto;
         }
 
         h1 {
