--- a/singlewindow/singlewindow/src/main/resources/static/html/user_login.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/user_login.html
@@ -26,19 +26,20 @@
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form action="#">
-			<h1>Sign in</h1>
-			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-			</div>
-			<span>or use your account</span>
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
-			<button id="forgotPasswordBtn" class="forgot-btn">Forgot Password?</button>
-			<button>Sign In</button>
-		</form>
+	
+		<form id="signInForm">
+            <h1>Sign in</h1>
+            <div class="social-container">
+                <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <span>or use your account</span>
+            <input type="email" id="email" placeholder="Email" required />
+            <input type="password" id="password" placeholder="Password" required />
+            <button type="button" id="forgotPasswordBtn" class="forgot-btn">Forgot Password?</button>
+            <button type="submit">Sign In</button>
+        </form>
 	</div>
 	<div class="overlay-container">
 		<div class="overlay">
