adjusted notification,FAQ's conatiner size

--- a/singlewindow/singlewindow/src/main/resources/static/html/User_Registration.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/User_Registration.html
@@ -176,7 +176,8 @@
 	</div>
 
 	<!--notification section-->
-	<div class="user_notifications">
+	<div class="container mt-5">
+	<div class="user_notifications" >
 		<strong>Notifications:</strong>
 		<p>✅ Your Business Registration was approved!</p>
 		<p>⚠️ Missing document in License Application.</p>
@@ -193,6 +194,7 @@
 			<p>You will receive reasons and steps to reapply.</p>
 		</div>
 	</div>
+</div>
 	
 
 	<div class="user_chatbot" onclick="toggleChat()">💬</div>
