--- a/singlewindow/singlewindow/src/main/resources/static/html/user_login.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/user_login.html
@@ -72,7 +72,7 @@
 					</div>
 				</div>
 <!-- partial -->
-  <script  src="./javascript/user_script.js"></script>
+  <script type="module" src="./javascript/user_script.js"></script>
 
 </body>
 </html>
