--- a/singlewindow/singlewindow/src/main/resources/static/html/Officer_dashboard.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/Officer_dashboard.html
@@ -127,10 +127,10 @@
       </table>
     </div>
   </section>
-  
-<!--approved applications  -->
+
+  <!-- Approved Applications Section -->
   <section id="approved-section" class="section-content container my-4 p-4 border rounded shadow-lg" style="display: none;">
-    <h2 class="text-center mb-4">Pending Applications</h2>
+    <h2 class="text-center mb-4">Approved Applications</h2>
     <div class="table-responsive">
       <table class="table table-striped table-bordered">
         <thead class="table-dark">
@@ -150,6 +150,7 @@
     </div>
   </section>
 
+  <!--  -->
   <section id="rejected-section" class="section-content container my-4 p-4 border rounded shadow-lg" style="display: none;">
     <h2>Rejected</h2>
     <div class="documents" id="rejected-documents"></div>
