fixed bugs in pie chart

--- a/singlewindow/singlewindow/src/main/resources/static/html/Officer_dashboard.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/Officer_dashboard.html
@@ -18,7 +18,7 @@
       <li><a href="#" id="logout-btn" class="btn logout">Logout</a></li>
     </ul>
   </nav>
-
+<!-- Home section -->
   <section class="home-section section-content active" id="home-section">
     <div class="hero">
       <h1>Welcome to OneStop Kairos Approvals</h1>
@@ -76,7 +76,7 @@
       </div>
     </div>
   </section>
-
+<!-- pie chart section -->
   <section id="dashboard-section" class="dashboard-section section-content" style="display: none;">
     <h2>Dashboard Overview</h2>
     <div class="charts-row">
@@ -150,7 +150,7 @@
     </div>
   </section>
 
-  <!--  -->
+  <!-- Rejected section -->
   <section id="rejected-section" class="section-content container my-4 p-4 border rounded shadow-lg" style="display: none;">
     <h2>Rejected</h2>
     <div class="documents" id="rejected-documents"></div>
@@ -169,6 +169,7 @@
     </table>
   </section>
 
+  <!-- Profile section -->
   <section id="profile-section" class="section-content" style="display: none;">
     <h2>Profile</h2>
     <section class="profile-setup">
