--- a/singlewindow/singlewindow/src/main/resources/static/html/Officer_Login.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/Officer_Login.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Sign in/up Form</title>
-<link rel='stylesheet'
-	href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'>
+<link rel='stylesheet'href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'>
 <link rel="stylesheet" href="./css/officer_style.css">
 
 </head>
