--- a/singlewindow/singlewindow/src/main/resources/static/html/User_Registration.html
+++ b/singlewindow/singlewindow/src/main/resources/static/html/User_Registration.html
@@ -65,7 +65,7 @@
 								class="bi bi-speedometer2 me-2"></i>Dashboard</a></li>
 						<li><a class="dropdown-item" href="#settings"><i
 								class="bi bi-gear me-2"></i>Settings</a></li>
-						<li><a class="dropdown-item" href="#applications"><i
+						<li><a class="dropdown-item" href="User_Your_Application.html"><i
 								class="bi bi-file-earmark-text me-2"></i>Your Applications</a></li>
 						<li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item text-danger" href="#logout"><i
