--- a/singlewindow/singlewindow/src/main/resources/static/admin-dashboard.html
+++ b/singlewindow/singlewindow/src/main/resources/static/admin-dashboard.html
@@ -5,125 +5,334 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <style>
-        /* General Styles */
+        /* Karthik Effects (Particle Effects) */
+        #particles-js {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: auto;
+            z-index: -1;  /* Ensures particles stay in the background */
+            background: linear-gradient(45deg, #2193b0, #6dd5ed);  /* Blue to Light Blue Gradient */
+        }
+
+        /* General Page Styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background: #2193b0;  
+            color: #f1f1f1;
+            overflow-y: auto;  /* Allows scrolling if content exceeds height */
         }
 
-        /* Header */
         header {
-            background-color: #007bff;
+            background: #333;
             color: white;
-            padding: 1rem;
-            text-align: center;
+            padding: 1em 2em;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
-        nav {
-            margin-top: 10px;
+        header h1 {
+            margin: 0;
         }
 
-        nav a {
+        header nav a {
             color: white;
             text-decoration: none;
-            margin: 0 10px;
-            font-weight: bold;
+            padding: 0.5em;
+            margin-left: 20px;
+            border-radius: 4px;
         }
 
-        button {
-            background-color: red;
+        header nav a:hover {
+            background: #555;
+        }
+
+        header button {
+            background: #f44336;
             color: white;
-            padding: 8px 12px;
+            padding: 0.5em 1em;
             border: none;
+            border-radius: 4px;
             cursor: pointer;
         }
 
-        /* Dashboard Overview */
-        #stats {
-            text-align: center;
-            margin: 20px;
+        header button:hover {
+            background: #d32f2f;
+        }
+
+        main {
+            padding: 2em;
+        }
+
+        section {
+            margin-bottom: 2em;
         }
 
         .stat-box {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0px 0px 5px gray;
-            display: inline-block;
+            background: #fff;
+            padding: 1.5em;
+            border-radius: 8px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
 
-        /* Table Styling */
+        /* Dark-Themed Table */
         table {
-            width: 90%;
-            margin: 20px auto;
+            width: 100%;
             border-collapse: collapse;
-            background: white;
-            box-shadow: 0px 0px 5px gray;
+            background: #2e3b4e; 
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
 
         th, td {
-            padding: 10px;
-            border: 1px solid #ddd;
-            text-align: center;
+            padding: 12px;
+            text-align: left;
+            border-bottom: 1px solid #444;
         }
 
         th {
-            background-color: #007bff;
-            color: white;
+            background: #3b4c68; 
+            color: #fff;  /
         }
 
-        /* Footer */
+        td {
+            color: #f1f1f1;  
+        }
+
+        td button {
+            padding: 0.5em 1em;
+            margin-right: 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        td button:hover {
+            opacity: 0.8;
+        }
+
+        td button:nth-child(1) {
+            background-color: #4caf50; /* Edit Button */
+        }
+
+        td button:nth-child(2) {
+            background-color: red; /* Delete Button */
+        }
+
         footer {
-            background-color: #007bff;
+            background: #333;
             color: white;
             text-align: center;
-            padding: 10px;
-            position: relative;
-            width: 100%;
+            padding: 1em;
+            position: fixed;
             bottom: 0;
+            width: 100%;
+            margin-top: auto; /* Ensures the footer is pushed to the bottom */
+        }
+
+        /* Glassmorphism Effect for Sections */
+        .stat-box, table {
+            backdrop-filter: blur(10px);
+            background: rgba(255, 255, 255, 0.2);
+        }
+        
+        /* Additional styles for Home page content */
+        .home-section {
+            background: rgba(255, 255, 255, 0.2);
+            padding: 2em;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        .home-section h2 {
+            color: #fff;
+        }
+
+        .recent-activities ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .recent-activities li {
+            background: #3b4c68;
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            color: #fff;
+        }
+
+        /* Profile Section */
+        .profile-content, #user-management, #notifications {
+            display: none;
+        }
+
+        /* Profile container for centering content */
+        .profile-container {
+            max-width: 600px;
+            margin: 50px auto;
+            background: rgba(255, 255, 255, 0.2);
+            padding: 2em;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            color: #fff;
+        }
+
+        /* Profile form input styling */
+        #profileForm input[type="text"],
+        #profileForm input[type="email"] {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            background-color: rgba(255, 255, 255, 0.8);
+            color: #333;
+            font-size: 1em;
+            box-sizing: border-box;
+            transition: border-color 0.3s ease;
+        }
+
+        #profileForm input[type="text"]:focus,
+        #profileForm input[type="email"]:focus {
+            border-color: #2193b0;
+            outline: none;
+            background-color: #fff;
+        }
+
+        /* Notification Dropdown Styles */
+        #notificationDropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        #notificationDropdown .dropdown-menu {
+            display: none;
+            position: absolute;
+            right: -100;
+            background-color: #333;
+            color: #fff;
+            min-width: 200px;
+            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        #notificationDropdown:hover .dropdown-menu {
+            display: block;
+        }
+
+        #notificationDropdown .dropdown-menu li {
+            padding: 10px;
+            border-bottom: 1px solid #444;
+        }
+
+        #notificationDropdown .dropdown-menu li:last-child {
+            border-bottom: none;
+        }
+
+        /* Make sure dropdown appears correctly */
+        .dropdown-menu li:hover {
+            background-color: #555;
         }
     </style>
 </head>
 <body>
+    <!-- Particle Background (karthik_effcts) -->
+    <div id="particles-js"></div>
+
     <header>
         <h1>Admin Dashboard</h1>
         <nav>
-            <a href="dashboard.html">Home</a>
-            <a href="application-status.html">Applications</a>
-            <a href="notifications.html">Notifications</a>
-            <a href="profile.html">Profile</a>
+            <a href="javascript:void(0);" onclick="showHome()">Home</a>
+            <a href="javascript:void(0);" onclick="showApplicationStatus()">Applications</a>
+            <a href="javascript:void(0);" onclick="showNotifications()">Notifications</a>
+            <a href="javascript:void(0);" onclick="showProfile()">Profile</a>
             <button onclick="logout()">Logout</button>
         </nav>
     </header>
 
     <main>
-        <section id="stats">
-            <h2>Dashboard Overview</h2>
+        <!-- Home Page Content -->
+        <section class="home-section" id="home-content">
+            <h2>Welcome to the Admin Dashboard</h2>
+            <p>This is your central hub where you can manage users, track applications, and stay updated with the latest notifications.</p>
             <div class="stat-box">
-                <p><strong>Total Users:</strong> <span id="totalUsers">0</span></p>
+                <h3>Key Stats</h3>
+                <p><strong>Total Users:</strong> 
+                <span id="totalUsers">0</span></p>
             </div>
         </section>
+        <section class="home-section recent-activities" id="recent-activities">
+            <h3>Recent Activities</h3>
+            <ul>
+                <li>Application 1024 approved by Officer</li>
+                <li>User John Doe added to the system</li>
+                <li>Notification sent regarding policy update</li>
+                <li>Profile update request from User 2020</li>
+            </ul>
+        </section>
+    
 
-        <section id="user-management">
-            <h2>User Management</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>User ID</th>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Role</th>
-                        <th>Created At</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="userTable">
-                    <tr><td colspan="6">Loading...</td></tr>
-                </tbody>
-            </table>
+
+
+        <!-- Profile Section (Initially hidden) -->
+        <section class="profile-content" id="profile-content">
+            <h2>Profile</h2>
+            <div class="profile-container">
+                <p>Welcome to your profile page. You can manage your profile details here.</p>
+                <form id="profileForm">
+                    <label for="profileName">Name:</label><br>
+                    <input type="text" id="profileName" name="profileName" value="Admin User"><br><br>
+                    <label for="profileEmail">Email:</label><br>
+                    <input type="email" id="profileEmail" name="profileEmail" value="admin@example.com"><br><br>
+                    <label for="profileRole">Role:</label><br>
+                    <input type="text" id="profileRole" name="profileRole" value="Administrator" readonly><br><br>
+                    <button type="button" onclick="saveProfile()">Save Changes</button>
+                </form>
+            </div>
+            <script>
+                function saveProfile() {
+                    alert("Profile changes saved successfully!");
+                    // Here you can add code to save profile changes to the server
+                }
+            </script>
+        </section>
+<!-- User Management Section -->
+<section id="user-management">
+    <h2>User Management</h2>
+    <table id="table">
+        <thead>
+            <tr>
+                <th>User ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Role</th>
+                <th>Created At</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody id="userTable">
+            <tr><td colspan="6">Loading...</td></tr>
+        </tbody>
+    </table>
+</section>
+
+        <!-- Notifications Section -->
+        <section id="notifications">
+            <h2>Notifications</h2>
+            <div id="notificationDropdown">
+                <button class="dropdown-toggle" style="background: transparent; border: none; color: white; cursor: pointer;">Notifications</button>
+                <ul class="dropdown-menu">
+                    <li>New application submitted</li>
+                    <li>Policy update available</li>
+                    <li>User profile updated</li>
+                </ul>
+            </div>
         </section>
     </main>
 
@@ -131,7 +340,86 @@
         <p>&copy; 2025 Single-Window Approval System</p>
     </footer>
 
+    <!-- Particles.js Library -->
+    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <script>
+        // Initialize the particle effect (karthik_effcts)
+        particlesJS("particles-js", {
+            "particles": {
+                "number": {
+                    "value": 80,
+                    "density": {
+                        "enable": true,
+                        "value_area": 800
+                    }
+                },
+                "color": {
+                    "value": "#ffffff"  /* White particles for contrast */
+                },
+                "shape": {
+                    "type": "circle",
+                    "stroke": {
+                        "width": 0,
+                        "color": "#000000"
+                    }
+                },
+                "opacity": {
+                    "value": 0.4,  /* Lower opacity for a smoother effect */
+                    "random": true,
+                    "anim": {
+                        "enable": true,
+                        "speed": 1,
+                        "opacity_min": 0.1,
+                        "sync": false
+                    }
+                },
+                "size": {
+                    "value": 5,
+                    "random": true,
+                    "anim": {
+                        "enable": true,
+                        "speed": 10,
+                        "size_min": 0.1,
+                        "sync": false
+                    }
+                },
+                "line_linked": {
+                    "enable": true,
+                    "distance": 150,
+                    "color": "#ffffff",
+                    "opacity": 0.4,
+                    "width": 1
+                },
+                "move": {
+                    "enable": true,
+                    "speed": 6,
+                    "direction": "none",
+                    "random": false,
+                    "straight": false,
+                    "out_mode": "out",
+                    "attract": {
+                        "enable": false
+                    }
+                }
+            },
+            "interactivity": {
+                "detect_on": "canvas",
+                "events": {
+                    "onhover": {
+                        "enable": true,
+                        "mode": "repulse"
+                    },
+                    "onclick": {
+                        "enable": true,
+                        "mode": "push"
+                    },
+                    "resize": true
+                }
+            },
+            "retina_detect": true
+        });
+
+        // JavaScript for Fetching Users (No Changes)
         document.addEventListener("DOMContentLoaded", fetchUsers);
 
         async function fetchUsers() {
@@ -191,8 +479,44 @@
 
         function deleteUser(userId) {
             if (confirm("Are you sure you want to delete this user?")) {
-                alert(`User ID ${userId} deleted (not implemented yet).`);
+                alert(`Delete functionality for User ID: ${userId} will be added later.`);
             }
+        }
+
+        // Show Home Page
+        function showHome() {
+            document.getElementById("home-content").style.display = "block";
+            document.getElementById("recent-activities").style.display = "block";
+            document.getElementById("profile-content").style.display = "none";
+            document.getElementById("user-management").style.display = "none";
+            document.getElementById("notifications").style.display = "none";
+        }
+
+        // Show Profile
+        function showProfile() {
+            document.getElementById("home-content").style.display = "none";
+            document.getElementById("recent-activities").style.display = "none";
+            document.getElementById("profile-content").style.display = "block";
+            document.getElementById("user-management").style.display = "none";
+            document.getElementById("notifications").style.display = "none";
+        }
+
+        // Show Notifications
+        function showNotifications() {
+            document.getElementById("home-content").style.display = "none";
+            document.getElementById("recent-activities").style.display = "none";
+            document.getElementById("profile-content").style.display = "none";
+            document.getElementById("user-management").style.display = "none";
+            document.getElementById("notifications").style.display = "block";
+        }
+
+        // Show User Management
+        function showApplicationStatus() {
+            document.getElementById("home-content").style.display = "none";
+            document.getElementById("recent-activities").style.display = "none";
+            document.getElementById("profile-content").style.display = "none";
+            document.getElementById("user-management").style.display = "block";
+            document.getElementById("notifications").style.display = "none";
         }
     </script>
 </body>
